# pearless-learn

./: .gitignore  CLAUDE.md  README.md  conftest.py  evaluate.py  fx_prediction_design_v3.md  pipeline.py  pipeline_mtf.py  pyproject.toml
data/labels/: dataset-metadata.json
data/npy/: dataset-metadata.json
data/npy_mtf/: dataset-metadata.json
data/src/: dataset-metadata.json
docs/: prd.md
docs/adr/: ADR-0001-model-architecture-selection.md  ADR-0002-technical-indicator-library.md
docs/design/: fx-prediction-design.md
docs/plans/: work_plan.md  (+2 more)
inference/: engine.py  interface.py  pipe_stub.py
models/: __init__.py  base.py  cnn.py  configs.py  itransformer.py  lstm.py  patchtst.py  training.py
mt4/: PearlessBreakout.mq4  PearlessDirection.mq4
notebooks/: compare_models.ipynb  kernel-metadata-cnn.json  kernel-metadata-itransformer.json  kernel-metadata-lstm.json  kernel-metadata-lstm_clean.json  kernel-metadata-lstm_dir.json  kernel-metadata-lstm_dir_v2.json  kernel-metadata-patchtst.json  kernel-metadata-walkforward.json  kernel-metadata.json  train_cnn.ipynb  train_itransformer.ipynb  train_lstm.ipynb  train_lstm_clean.ipynb  train_lstm_dir.ipynb  train_lstm_dir_v2.ipynb  train_lstm_focal.ipynb  train_lstm_h256.ipynb  train_patchtst.ipynb  train_walkforward.ipynb
production/: README.md  TEMPLATE_forward_test.md
scripts/: backtest_dir_v2.py  backtest_oco.py  backtest_oco_clean.py  backtest_oco_exits.py  make_clean_labels.py  mt4_signal_writer.py  mt4_signal_writer_dir_v2.py  resample_m1_to_m5.py  summarize_forward_test.py  upload_dataset.py
(+44 files in other folders)
